--- a/templates/start.html
+++ b/templates/start.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>Type some words and get resulting websites including this word.</h1>
-        <form action='search' method='get'>
+        <form action={{ url_for('search') }} method='get'>
             <input name='q' type='text'>
         </form>       
     </body>
