--- a/templates/search.html
+++ b/templates/search.html
@@ -8,6 +8,9 @@
         <div class="max-w-7xl mx-auto items-center content-center px-4 sm:px-6 lg:px-8 pt-12 pb-24">
             <h1 class="text-3xl font-bold underline mb-4">Results for "{{ q }}"</h1>
             {% if results %}
+            <p class="mb-2">
+                {{results|length}} pages found
+            </p>
             <ul class="list-inside space-y-2 max-w-lg  ">
                 {% for r in results %}
                 <li class="p-2 bg-gray-50 rounded-md border border-gray-300">
@@ -22,6 +25,7 @@
             <p>
                 Unfortunately, there are no results for "{{ q }}"
             </p>
+            <img class="-ml-16" src="{{ url_for('static', filename='images/nothing_found_stock.jpg') }}" alt="nothing found" width="30%">
             {% endif %}
             <button class="mt-4 text-white bg-gray-600 hover:bg-gray-800 focus:ring-4 focus:outline-none focus:ring-gray-300 font-medium rounded-lg text-sm px-4 py-2">
                 <a href='/home'>Return to home page</a>
