--- a/templates/search.html
+++ b/templates/search.html
@@ -70,7 +70,7 @@
             <img class="-ml-16" src="{{ url_for('static', filename='images/nothing_found_stock.jpg') }}" alt="nothing found" width="30%">
             {% endif %}
             <button class="mt-4 text-white bg-gray-600 hover:bg-gray-800 focus:ring-4 focus:outline-none focus:ring-gray-300 font-medium rounded-lg text-sm px-4 py-2">
-                <a href='/home'>Return to home page</a>
+                <a href={{ url_for('home') }}>Return to home page</a>
             </button>
         </div>
     </body>
